assets/css/styles.css
/* ... */
.testimonial__description{
  margin-bottom: var(--mb-2-5);
}

.testimonial__icon-star{
  color: var(--first-color);
}

.swiper .swiper-pagination-testimonial{
  bottom: 0;
}


/*==================== CONTACT ME ====================*/
.contact__container{
  row-gap: 3rem;
}

.contact__information{
  display: flex;
  margin-bottom: var(--mb-2);
}

.contact__icon{
  font-size: 2rem;
  color: var(--first-color);
  margin-right: var(--mb-0-75);
}

.contact__title{
  font-size: var(--h3-font-size);
  font-weight: var(--font-medium);
}

.contact__subtitle{
  font-size: var(--small-font-size);
  color: var(--text-color-light)
}

.contact__content{
  background-color: var(--input-color);
  border-radius: .5rem;
  padding: .75rem 1rem .25rem;
}

.contact__label{
  font-size: var(--small-font-size);
  color: var(--title-color);
}

.contact__input{
  width: 100%;
  background-color: var(--input-color);
  color: var(--text-color);
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  border: none;
  outline: none;
  padding: .25rem .5rem .5rem 0;
}

/*==================== FOOTER ====================*/
.footer{
  padding-top: 2rem;
}

.footer__container{
  row-gap: 3.5rem;
}

.footer__bg{
  background-color: var(--first-color-second);
  padding: 2rem 0 3rem;
}

.footer__title{
  font-size: var(--h1-font-size);
  margin-bottom: var(--mb-0-25);
}

.footer__subtitle{
  font-size: var(--small-font-size);
}

.footer__links{
  display: flex;
  flex-direction: column;
  row-gap: 1.5rem;
}

/* .footer__links:visited{
  text-decoration: none;
  color: #fff;
} */

.footer__links:hover{
  color: var(--first-color-lighter);
}

.footer__social{
  font-size: 1.25rem;
  margin-right: var(--mb-1-5);
}

.footer__social:hover{
  color: var(--first-color-lighter);
}

/* .footer__social:visited{
  text-decoration: none;
  color: #fff;
} */

.footer__copy{
  font-size: var(--smaller-font-size);
  text-align: center;
  color: var(--text-color-light);
  margin-top: var(--mb-3);
}

.footer__title,
.footer__subtitle,
.footer__links,
.footer__social{
  color: #fff;
}

/*========== SCROLL UP ==========*/
.scrollup{
  position: fixed;
  right: 1rem;
  bottom: -20%;
  background-color: var(--first-color);
  opacity: .8;
  padding: 0 .3rem;
  border-radius: .4rem;
  z-index: var(--z-tooltip);
  transition: .4s;
}

.scrollup:hover{
  background-color: var(--first-color-alt);
}

.scrollup__icon{
  font-size: 1.5rem;
  color: #fff;
}

/* Show scroll */
.show-scroll{
  bottom: 5rem;
}

/*========== SCROLL BAR ==========*/
::-webkit-scrollbar{
  width: .60rem;
  background-color: var(--scroll-bar-color);
  border-radius: .5rem;
}

::-webkit-scrollbar-thumb{
  background-color: var(--scroll-thumb-color);
  border-radius: .5rem;
}

::-webkit-scrollbar-thumb:hover{
  background-color: var(--text-color-light);
}

/*==================== MEDIA QUERIES ====================*/
/* For small devices */
@media screen and (max-with: 350px){
  .container{
    margin-left: var(--mb-1);
    margin-right: var(--mb-1);
  }

  .nav__menu{
    padding: 2rem .25rem 4rem;
  }
  .nav__list{
    column-gap: 0;
  }

  .home__content{
    grid-template-columns: .25fr 3fr;
  }
  .home__blob{
    width: 180px;
  }
  .home__description{
    /* width: 320px; */
    word-wrap: break-word;
  }

  .skills__title{
    font-size: var(--normal-font-size);
  }

  .qualification__data{
    gap: .5rem;
  }

  .services__container{
    grid-template-columns: max-content;
    justify-content: center;
  }
  .services__content{
    padding-right: 3.5rem;
  }
  .services__modal{
    padding: 0 0.5rem;
  }

  .project__img{
    width: 200px;
  }

  .testimonial__data,
  .testimonial__header{
    flex-direction: column;
    align-items: center;
  }
  .testimonial__img{
    margin-right: 0;
    margin-bottom: var(--mb-0-25);
  }
  .testimonial__data,
  .testimonial__description{
    text-align: center;
  } 
}

/* For medium devices */
@media screen and (min-width: 568px){
  .home__content{
    grid-template-columns: max-content 1fr 1fr;
  }
  .home__data{
    grid-column: initial;
  }
  .home__img{
    order: 1;
    justify-self: center;
  }

  .about__container,
  .skills__container,
  .portfolio__content,
  .project__container,
  .contact__container,
  .footer__container{
    grid-template-columns: repeat(2, 1fr);
  }

  .qualification__sections{
    display: grid;
    grid-template-columns: .6fr;
    justify-content: center;
  }
}
/* ... */

